# ProjetNAO

./: .gitignore  README.md
.qi/: qibuild.xml
basic_motion/: CMakeLists.txt  arm.cpp  arm.h  basicmotion.cpp  basicmotion.h  common.cpp  common.h  crouch.cpp  crouch.h  facedetectionlistener.cpp  facedetectionlistener.h  facedetectionlistenertest.cpp  facedetectionlistenertest.h  head.cpp  head.h  leds.cpp  leds.h  leg.cpp  leg.h  lyingback.cpp  lyingback.h  lyingbelly.cpp  lyingbelly.h  main.cpp  motion.cpp  motion.h  posture.cpp  posture.h  qiproject.xml  say.cpp  say.h  scheduler.cpp  scheduler.h  sensorlistener.cpp  sensorlistener.h  sensorlistenertest.cpp  sensorlistenertest.h  sit.cpp  sit.h  sitrelax.cpp  (+17 more)
basic_motion/build-mytc/: CMakeCache.txt  CTestTestfile.cmake  Makefile  basic_motion.cbp  cmake_install.cmake  dependencies.cmake
basic_motion/build-sys-linux-x86_64/: CMakeCache.txt  CTestTestfile.cmake  Makefile  basic_motion.cbp  cmake_install.cmake  dependencies.cmake
basic_motion/listener/: soundlocalizationlistenertest.cpp  soundlocalizationlistenertest.h
